--- a/components/result/OpportunityMatrix.module.css
+++ b/components/result/OpportunityMatrix.module.css
@@ -50,7 +50,7 @@
 
 .quadrantLabel {
   font-size: 11px;
-  fill: #666864;
+  fill: #a3a39c;
   font-style: italic;
 }
 
