--- a/components/result/ROIMetricTile.module.css
+++ b/components/result/ROIMetricTile.module.css
@@ -26,12 +26,12 @@
 .insufficient {
   font-size: 14px;
   font-style: italic;
-  color: #666864;
+  color: #a3a39c;
 }
 
 .subtitle {
   font-size: 11px;
-  color: #888886;
+  color: #a3a39c;
   font-style: italic;
   margin-top: -4px;
 }
