--- a/components/result/RiskCard.module.css
+++ b/components/result/RiskCard.module.css
@@ -61,5 +61,5 @@
 
 .source {
   font-size: 12px;
-  color: #666864;
+  color: #a3a39c;
 }
